Speed up deployment by disabling complex components
- Disabled Redis temporarily (can re-enable later)
- Removed --wait and --timeout from Helm commands for faster deployment
- Deployment will be async, allowing build to complete quickly
- Basic services should deploy without waiting for full readiness

--- a/helm/trading-system/values.yaml
+++ b/helm/trading-system/values.yaml
@@ -33,7 +33,7 @@ tpu:
 
 # Redis configuration
 redis:
-  enabled: true
+  enabled: false  # Temporarily disabled for faster deployment
   architecture: standalone
   auth:
     enabled: false
