Fix indentation error in logging_config.py

--- a/k8s-secrets.yaml
+++ b/k8s-secrets.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: cloud-trader-secrets
-  namespace: trading
+  namespace: trading-system-fresh
 type: Opaque
 data:
   # Base64 encode real values: echo -n "your_real_value" | base64
