--- a/k8s-configmap-prometheus.yaml
+++ b/k8s-configmap-prometheus.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: prometheus-config
-  namespace: trading
+  namespace: trading-system-fresh
   labels:
     app: prometheus
 data:
