Fix indentation errors in logging_config.py

--- a/k8s-deployment-mcp-coordinator.yaml
+++ b/k8s-deployment-mcp-coordinator.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: trading-coordinator
-  namespace: trading-system-fresh
+  namespace: trading-system-clean
   labels:
     app: mcp-coordinator
     component: messaging
