--- a/k8s-service-mcp-coordinator.yaml
+++ b/k8s-service-mcp-coordinator.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: coordinator-service
-  namespace: trading-system-fresh
+  namespace: trading-system-clean
   labels:
     app: mcp-coordinator
     component: messaging
