--- a/cloud_trader/requirements.txt
+++ b/cloud_trader/requirements.txt
@@ -21,3 +21,9 @@ asyncpg==0.30.0
 sqlalchemy==2.0.44
 firebase-admin==6.6.0
 tenacity==9.1.2
+
+# Solana/Jupiter Integration
+solders>=0.21.0
+solana>=0.34.0
+httpx>=0.27.0
+cryptography>=42.0.0
