--- a/cloud_trader/requirements.txt
+++ b/cloud_trader/requirements.txt
@@ -16,6 +16,7 @@ pandas-ta-openbb==0.4.22
 google-cloud-secret-manager==2.25.0
 google-cloud-bigquery==3.38.0
 google-cloud-pubsub==2.33.0
+google-cloud-firestore==2.14.0
 python-json-logger==2.0.7
 asyncpg==0.30.0
 sqlalchemy==2.0.44
