--- a/trading-dashboard/package.json
+++ b/trading-dashboard/package.json
@@ -11,6 +11,11 @@
     "@mui/material": "^5.14.19",
     "@mui/x-charts": "^6.0.0-alpha.6",
     "@mui/x-data-grid": "^6.15.0",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
+    "@solana/web3.js": "^1.98.4",
     "@types/react-router-dom": "^5.3.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
