--- a/cloud_trader/requirements.txt
+++ b/cloud_trader/requirements.txt
@@ -22,6 +22,10 @@ asyncpg==0.30.0
 sqlalchemy==2.0.44
 firebase-admin==6.6.0
 tenacity==9.1.2
+wsproto==1.2.0
+websockets==14.1
+lz4==4.3.3
+google-cloud-bigquery-storage==2.24.0
 
 # Solana/Jupiter Integration
 solders>=0.21.0
@@ -30,3 +34,4 @@ httpx>=0.27.0
 cryptography>=42.0.0
 hyperliquid-python-sdk>=0.4.0
 eth-account>=0.8.0
+base58>=2.1.1
