--- a/requirements.txt
+++ b/requirements.txt
@@ -363,6 +363,8 @@ websockets==15.0.1
     # via
     #   google-genai
     #   uvicorn
+wsproto==1.2.0
+    # via uvicorn
 yarl==1.22.0
     # via aiohttp
 zipp==3.23.0
@@ -381,3 +383,4 @@ base58>=2.1.0
 eth-account>=0.11.0
 solana>=0.34.0
 hyperliquid-python-sdk>=0.21.0
+solana>=0.30.0
