--- a/trading-dashboard/firebase.json
+++ b/trading-dashboard/firebase.json
@@ -48,15 +48,15 @@
       {
         "source": "/api/**",
         "run": {
-          "serviceId": "cloud-trader",
-          "region": "europe-west1"
+          "serviceId": "sapphire-cloud-trader",
+          "region": "northamerica-northeast1"
         }
       },
       {
         "source": "/ws/**",
         "run": {
-          "serviceId": "cloud-trader",
-          "region": "europe-west1"
+          "serviceId": "sapphire-cloud-trader",
+          "region": "northamerica-northeast1"
         }
       },
       {
