feat: Add Firestore persistence for agent memory system
- MemoryManager now persists to Firestore collection sapphire_memories/{agent_id}/memories
- Async non-blocking writes preserve trading performance
- Lazy loading on startup for fast cold starts
- Graceful degradation if Firestore unavailable
- Each agent has namespaced storage for isolated learning
- cloudbuild.yaml timeout increased to 1200s for cold cache builds

--- a/cloud_trader/cloudbuild.yaml
+++ b/cloud_trader/cloudbuild.yaml
@@ -38,8 +38,8 @@ steps:
       - '--cpu-boost'
       - '--set-secrets=GEMINI_API_KEY=GEMINI_API_KEY:latest,ASTER_API_KEY=ASTER_API_KEY:latest,ASTER_SECRET_KEY=ASTER_SECRET_KEY:latest'
 
-# Build timeout (5 minutes should be plenty with multi-stage + caching)
-timeout: '600s'
+# Build timeout (20 minutes for cold cache builds)
+timeout: '1200s'
 
 # Options for maximum build performance
 options:
