--- a/requirements.txt
+++ b/requirements.txt
@@ -384,3 +384,12 @@ eth-account>=0.11.0
 solana>=0.34.0
 hyperliquid-python-sdk>=0.21.0
 solana>=0.30.0
+
+faiss-cpu
+sentence-transformers
+numpy
+ccxt
+websocket-client
+lightgbm
+pandas
+scikit-learn
