fix: Add missing ccxt dependency for exchange data fetching

--- a/cloud_trader/requirements.txt
+++ b/cloud_trader/requirements.txt
@@ -36,6 +36,7 @@ lz4==4.3.3
 google-cloud-bigquery-storage==2.24.0
 
 # Solana/Jupiter Integration
+ccxt>=4.0.0
 
 driftpy>=0.7.0
 eth-account>=0.8.0
