--- a/cloud_trader/requirements.txt
+++ b/cloud_trader/requirements.txt
@@ -45,3 +45,14 @@ base58>=2.1.1
 google-cloud-aiplatform>=1.70.0
 psutil>=5.9.0
 packaging==22.0
+
+# ML and RL dependencies
+lightgbm>=4.0.0
+gymnasium>=0.29.0
+joblib>=1.3.0
+
+# Additional utilities
+requests>=2.31.0
+alembic>=1.12.0
+cryptography>=41.0.0
+solders>=0.20.0
