--- a/cloud_trader/Dockerfile
+++ b/cloud_trader/Dockerfile
@@ -27,6 +27,7 @@ WORKDIR /app
 # Install only runtime dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq5 \
+    libgomp1 \
     && rm -rf /var/lib/apt/lists/* \
     && apt-get clean
 
