feat: Complete frontend makeover for Claude V1.0 architecture
- Updated API client to new backend URL (sapphire-v2-s77j6bxyra-uc.a.run.app)
- Added comprehensive V2 API endpoints (Symphony, platforms, memory, trading)
- Enhanced theme with premium glassmorphism and platform colors
- Redesigned MainLayout with live health check integration
- Rebuilt Dashboard with platform status, agent weights, Symphony treasury, memory system
- Redesigned AgentsView with weighted consensus visualization
- Added TypeScript configs for proper build
- Updated firebase.json to point to sapphire-web/dist
- Version bump to 2.0.0

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist",
+    "public": "sapphire-web/dist",
     "ignore": [
       "firebase.json",
       "**/.*",
